# Edited_fx4f

./: .gitignore  .gitmodules  MERGE_REQUEST_GUIDE.md  README.md  postprocess.py  readme.md  simulation.py
fx4f/: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
fx4f/src/fx4f/: __init__.py
fx4f/src/fx4f/error_estimation/: __init__.py  error_norms.py
fx4f/src/fx4f/fluid_mechanics/: __init__.py  initial_conditions.py  measures.py  postprocess.py
fx4f/src/fx4f/io/: __init__.py  io.py  plotting.py
fx4f/src/fx4f/miscellaneous/: __init__.py  mesh_operations.py  projections.py
fx4f/src/fx4f/reference_solutions/: DFG2D_cylinder.py  Ethier_Steinman.py  John2004.py  Taylor_Green.py  Turek_Hron.py  channelflow.py  reference_solution.py
fx4f/src/fx4f/reference_solutions/data/DFG2D3-draglift_q2_cn_lv1-6_dt4/: bdforces_lv1  bdforces_lv3  bdforces_lv5
fx4f/src/fx4f/solvers/: IMEX_Runge_Kutta.py  __init__.py  ksp_options.py  ksp_options_stokes.py  snes_options.py
fx4f/src/fx4f/turbulence/: __init__.py  solution_processing.py  statistics.py
fx4f/tests/: README.md  test_DFG2D_cylinder.py  test_channelflow.py  test_error_norms.py  test_ethier_steinman.py  test_imex_runge_kutta.py  test_initial_conditions.py  test_io.py  test_ksp_options.py  test_ksp_options_stokes.py  test_measures.py  test_mesh_operations.py  test_postprocess.py  test_projections.py  test_reference_solution.py  test_snes_options.py  test_solution_processing.py  test_taylor_green.py  test_turbulence_statistics.py  test_turek_hron.py
utils/: plotting.py
(+11 files in other folders)
